--- a/index.html
+++ b/index.html
@@ -4,11 +4,84 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>La repubblica</title>
+    <title>la Repubblica - News in tempo reale - Le notizie e i video di politica, cronaca, economia, sport</title>
     <link rel="stylesheet" href="CSS/index.css">
     <link rel="stylesheet" href="../WEB DEVELOPER/Font/fontawesome-free-5.15.3-web/css/all.min.css">
+    <link rel="shortcut icon" href="Asset/images/favicon.ico">
 </head>
 <body>
-    
+    <header>
+        <div class="container-header">
+        <button class="button-header"><i class="fas fa-grip-lines"></i> menù</button> |
+        <button class="button-header search"><i class="fas fa-search"></i> Cerca</button>
+        <button class="button-header">Abbonati</button>
+        <button class="button-header dealy">Quotidiano <strong>R</strong></button> |
+        <button class="button-header">accedi <i class="fas fa-user-circle"></i></button>
+        </div>
+        <br>
+        <br>
+    </header>
+    <main>
+        <div class="logo">
+        <img src="Asset/images/unnamed.jpg" alt="logo">
+        <p class="date">06 Agosto 2021 - Aggiornato alle 14.56</p>
+        </div>
+        <div class="container-main">
+            <nav>
+                <ul class="list">
+                    <li><a href="#" class="first-list">Politica</a></li>
+                    <li><a href="#" class="first-list">Economia</a></li>
+                    <li><a href="#" class="first-list">Mondo</a></li>
+                    <li><a href="#" class="first-list">Italia</a></li>
+                    <li><a href="#" class="first-list">Edizioni locali</a></li>
+                    <li><a href="#" class="first-list">Spettacoli</a></li>
+                    <li><a href="#" class="first-list">Cultura</a></li>
+                    <li><a href="#" class="first-list">Il Venerdì</a></li>
+                    <li><a href="#" class="first-list">D</a></li>
+                    <li><a href="#" class="first-list end">RepTv</a></li>
+                </ul>
+            </nav>
+            <hr class="f1-line">
+            <nav>
+            <ul class="list">
+                <li><a href="#" class="second-list">Green Pass</a></li>
+                <li><a href="#" class="second-list">Vaccinazioni</a></li>
+                <li><a href="#" class="second-list">Olimpiadi</a></li>
+                <li><a href="#" class="second-list">Longform</a></li>
+                <li><a href="#" class="second-list">Podcast</a></li>
+                <li><a href="#" class="second-list">Salute</a></li>
+                <li><a href="#" class="second-list">Green&Blue</a></li>
+                <li><a href="#" class="second-list">Moda e Beauty</a></li>
+                <li><a href="#" class="second-list">Il Gusto</a></li>
+                <li><a href="#" class="second-list end-1">Italian Tech</a></li>
+            </ul>
+        </nav>
+        <hr class="f2-line">
+        <div>
+            <img class="image" src="asset/images/131401530-736b9937-2a63-4f0c-8a4b-f815fb13bc4c.webp" width="1086" height="400" alt="">
+        </div>
+        <div class="text">
+        <p>Atletica</p>
+        <h1>Italia da leggenda: anche la staffetta 4x100 è d'oro | | Risultati | Medagliere | Italiani sul podio | Lo speciale | Podcast</h1>
+        <span>dal nostro inviato Fabio Tonacci</span>
+            </div>
+            <hr class="margin">
+            <br>
+            <div class="image-container">
+<div class="image-1">
+    <img src="asset/images/112723133-bf2d3e38-2c86-44eb-b320-389ae1a6971e.webp" alt="atleta" width="500" height="250">
+    <h5>MARCIA</h5>
+    <h4>Palmisano, la dominatrice dei 20 km | L'intervista: "Volevo un giorno perfetto"</h4>
+    <span class="span-image"><em>dal nostro inviato Mattia Chiusano</em></span>
+</div>
+<div class="image-2">
+    <img src="asset/images/154121738-37f8cb71-eb1f-4000-a055-b45270acd182.webp" alt="atleta-1" width="500" height="250">
+    <h5>KARATE</h5>
+    <h4>Tecnica e talento, Luigi Busà batte tutti nel kumite 75 kg</h4>
+    <span class="span-image"><em>dai nostrio inviato Ettore Livini</em></span>
+</div>
+            </div>
+        </div>
+    </main>
 </body>
 </html>
